--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,6 @@
     </table>
   </body>
   <!-- loads our JavaScript file -->
-  <script type="text/javascript" src="/script.js"></script>
+  <script type="text/javascript" src="/bundle.js"></script>
 
 </html>
